# kp-mod

./: .gitignore  CMakeLists.txt  create-solution-vs2019-win32.bat  create-solution-vs2022-win32.bat
src/: CMakeLists.txt  ai_bitch.c  ai_punk.c  ai_runt.c  ai_shorty.c  ai_thug.c  ai_whore.c  ep_all.c  ep_posionville.c  ep_radiocity.c  ep_shipyards.c  ep_skidrow.c  ep_steeltown.c  g_ai.c  g_ai.h  g_ai_ents.c  g_ai_fight.c  g_ai_memory.c  g_cmds.c  g_combat.c  g_fog.c  g_func.c  g_items.c  g_joe_misc.c  g_local.h  g_main.c  g_misc.c  g_pawn.c  g_phys.c  g_save.c  g_spawn.c  g_svcmds.c  g_target.c  g_teamplay.c  g_weapon.c  game.h  m_move.c  p_client.c  p_weapon.c  q_shared.c  (+3 more)
